--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </li>
           <li class="links__link">
             <p class="links__title">Charles</p>
-            <a class="linsk__link">естирование front-end / back-end</a>
+            <a class="linsk__link">Тестирование front-end / back-end</a>
           </li>
           <li class="links__link">
             <p class="links__title">Kibana</p>
